[gd_scene load_steps=23 format=3 uid="uid://nxr7b0d625fr"]

[ext_resource type="Script" path="res://Scenes/UserInterface/UI.gd" id="1_4p5ls"]
[ext_resource type="PackedScene" uid="uid://bo0ukg5akkk7i" path="res://Scenes/UserInterface/slot.tscn" id="3_c5nv1"]
[ext_resource type="Texture2D" uid="uid://cpsd6oce21let" path="res://Ressources/UI/rock.png" id="4_sylqw"]
[ext_resource type="Texture2D" uid="uid://cjogodcats6cl" path="res://Ressources/menu/interro.png" id="4_wug80"]
[ext_resource type="PackedScene" uid="uid://cod1nguf5sfab" path="res://Scenes/UserInterface/Tutorial.tscn" id="5_kivo1"]
[ext_resource type="Texture2D" uid="uid://eqjpgbv5eboi" path="res://Ressources/UI/bone.png" id="5_vw8t3"]
[ext_resource type="Texture2D" uid="uid://djefnqxd4ovdf" path="res://Ressources/UI/herb.png" id="6_axdck"]
[ext_resource type="Texture2D" uid="uid://cklhskx8mt2no" path="res://Ressources/UI/wood.png" id="7_p8u5l"]
[ext_resource type="Texture2D" uid="uid://eei8a85cj7d2" path="res://Ressources/UI/shroom.png" id="8_d2cv1"]
[ext_resource type="AudioStream" uid="uid://cdxsa6opiu7aw" path="res://Ressources/sounds/player/click1.wav" id="9_ym2u3"]
[ext_resource type="AudioStream" uid="uid://cry14ph8ulnoi" path="res://Ressources/sounds/player/click2.wav" id="10_q73ek"]
[ext_resource type="PackedScene" uid="uid://wdc3ni6egi2a" path="res://Scenes/UserInterface/tutoLabel.tscn" id="10_xfhny"]
[ext_resource type="AudioStream" uid="uid://iedr2bufhmtq" path="res://Ressources/sounds/player/click3.wav" id="11_ihdal"]
[ext_resource type="PackedScene" uid="uid://di8plgh71bb1w" path="res://Scenes/UserInterface/health_bar.tscn" id="12_8sgdl"]
[ext_resource type="AudioStream" uid="uid://c5ghv4gprlgib" path="res://Ressources/sounds/player/click4.wav" id="12_c8ewe"]
[ext_resource type="AudioStream" uid="uid://c1034r8veig2c" path="res://Ressources/sounds/player/click5.wav" id="13_dts1s"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_4n7b4"]
random_pitch = 1.05
streams_count = 5
stream_0/stream = ExtResource("9_ym2u3")
stream_0/weight = 1.0
stream_1/stream = ExtResource("10_q73ek")
stream_1/weight = 1.0
stream_2/stream = ExtResource("11_ihdal")
stream_2/weight = 1.0
stream_3/stream = ExtResource("12_c8ewe")
stream_3/weight = 1.0
stream_4/stream = ExtResource("13_dts1s")
stream_4/weight = 1.0

[sub_resource type="InputEventKey" id="InputEventKey_eae5c"]
device = -1
keycode = 49
physical_keycode = 49
unicode = 49

[sub_resource type="InputEventKey" id="InputEventKey_iisfl"]
device = -1
keycode = 50
physical_keycode = 50
unicode = 50

[sub_resource type="InputEventKey" id="InputEventKey_6ut7r"]
device = -1
keycode = 51
physical_keycode = 51
unicode = 51

[sub_resource type="InputEventKey" id="InputEventKey_aknxl"]
device = -1
keycode = 52
physical_keycode = 52
unicode = 52

[sub_resource type="InputEventKey" id="InputEventKey_1ttkj"]
device = -1
keycode = 53
physical_keycode = 53
unicode = 53

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_4p5ls")

[node name="SlotbarClick" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_4n7b4")
volume_db = -8.0
pitch_scale = 0.35

[node name="Hotbar" type="HBoxContainer" parent="."]
offset_top = 530.0
offset_right = 1158.0
offset_bottom = 626.0
alignment = 1

[node name="Slot5" parent="Hotbar" instance=ExtResource("3_c5nv1")]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
key = SubResource("InputEventKey_eae5c")
additionalTexture = ExtResource("4_sylqw")

[node name="Slot6" parent="Hotbar" instance=ExtResource("3_c5nv1")]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
key = SubResource("InputEventKey_iisfl")
additionalTexture = ExtResource("5_vw8t3")

[node name="Slot7" parent="Hotbar" instance=ExtResource("3_c5nv1")]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
key = SubResource("InputEventKey_6ut7r")
additionalTexture = ExtResource("6_axdck")

[node name="Slot8" parent="Hotbar" instance=ExtResource("3_c5nv1")]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
key = SubResource("InputEventKey_aknxl")
additionalTexture = ExtResource("7_p8u5l")

[node name="Slot9" parent="Hotbar" instance=ExtResource("3_c5nv1")]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
key = SubResource("InputEventKey_1ttkj")
additionalTexture = ExtResource("8_d2cv1")

[node name="TutorialButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(244, 0)
offset_left = 1026.0
offset_top = 16.0
offset_right = 1270.0
offset_bottom = 260.0
scale = Vector2(0.5, 0.5)
action_mode = 0
texture_normal = ExtResource("4_wug80")
texture_pressed = ExtResource("4_wug80")
texture_hover = ExtResource("4_wug80")
texture_disabled = ExtResource("4_wug80")
texture_focused = ExtResource("4_wug80")
stretch_mode = 3

[node name="TutoPanel" parent="." instance=ExtResource("10_xfhny")]
position = Vector2(230, 286.956)
scale = Vector2(0.293186, 0.316793)

[node name="Tutorial" parent="." instance=ExtResource("5_kivo1")]
visible = false

[node name="HealthBar" parent="." instance=ExtResource("12_8sgdl")]

[connection signal="pressed" from="TutorialButton" to="." method="_on_texture_button_pressed"]
